Fixed Large Layout shift

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Default for larger screens */
 @font-face {
   font-family: 'VT323';
   src: url('VT323-Regular.ttf') format('truetype');
@@ -6,18 +5,6 @@
   font-style: normal;
   font-display: optional;
 }
-
-/* On mobile, wait for the font to load to avoid a swap */
-@media (max-width: 600px) {
-  @font-face {
-    font-family: 'VT323';
-    src: url('VT323-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
-}
-
 
 
 
